WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
148938
[GTK] 15 accessibility tests fail since
r186692
.
https://bugs.webkit.org/show_bug.cgi?id=148938
Summary
[GTK] 15 accessibility tests fail since r186692.
Carlos Alberto Lopez Perez
Reported
2015-09-07 11:47:23 PDT
Since
r186692
<
http://trac.webkit.org/r186692
> the following tests fail on the GTK port. Regressions: Unexpected text-only failures (15) accessibility/aria-table-hierarchy.html [ Failure ] accessibility/aria-table-with-presentational-elements.html [ Failure ] accessibility/aria-tables.html [ Failure ] accessibility/poorly-formed-aria-table.html [ Failure ] accessibility/roles-computedRoleString.html [ Failure ] accessibility/roles-exposed.html [ Failure ] accessibility/table-attributes.html [ Failure ] accessibility/table-cell-spans.html [ Failure ] accessibility/table-cells.html [ Failure ] accessibility/table-detection.html [ Failure ] accessibility/table-fallback-roles-expose-element-attributes.html [ Failure ] accessibility/table-sections.html [ Failure ] accessibility/table-with-footer-section-above-body.html [ Failure ] accessibility/table-with-missing-aria-role-rows.html [ Failure ] accessibility/table-with-rules.html [ Failure ] I have tested to locally revert
r186692
and the 15 tests pass after that. I guess something is missing to be implemented on the GTK port, or the tests need a rebaseline. I'm not familiar with the accessibility code, so I'm just opening the bug and marking this tests as failing on the GTK TestExpectation file. The links to the diffs are:
https://build.webkit.org/results/GTK%20Linux%2064-bit%20Release%20%28Tests%29/r189464%20%2810899%29/accessibility/table-sections-pretty-diff.html
https://build.webkit.org/results/GTK%20Linux%2064-bit%20Release%20%28Tests%29/r189464%20%2810899%29/accessibility/roles-computedRoleString-pretty-diff.html
https://build.webkit.org/results/GTK%20Linux%2064-bit%20Release%20%28Tests%29/r189464%20%2810899%29/accessibility/table-detection-pretty-diff.html
https://build.webkit.org/results/GTK%20Linux%2064-bit%20Release%20%28Tests%29/r189464%20%2810899%29/accessibility/table-with-missing-aria-role-rows-pretty-diff.html
https://build.webkit.org/results/GTK%20Linux%2064-bit%20Release%20%28Tests%29/r189464%20%2810899%29/accessibility/roles-exposed-pretty-diff.html
https://build.webkit.org/results/GTK%20Linux%2064-bit%20Release%20%28Tests%29/r189464%20%2810899%29/accessibility/table-with-footer-section-above-body-pretty-diff.html
https://build.webkit.org/results/GTK%20Linux%2064-bit%20Release%20%28Tests%29/r189464%20%2810899%29/accessibility/aria-table-with-presentational-elements-pretty-diff.html
https://build.webkit.org/results/GTK%20Linux%2064-bit%20Release%20%28Tests%29/r189464%20%2810899%29/accessibility/poorly-formed-aria-table-pretty-diff.html
https://build.webkit.org/results/GTK%20Linux%2064-bit%20Release%20%28Tests%29/r189464%20%2810899%29/accessibility/table-with-rules-pretty-diff.html
https://build.webkit.org/results/GTK%20Linux%2064-bit%20Release%20%28Tests%29/r189464%20%2810899%29/accessibility/table-fallback-roles-expose-element-attributes-pretty-diff.html
https://build.webkit.org/results/GTK%20Linux%2064-bit%20Release%20%28Tests%29/r189464%20%2810899%29/accessibility/aria-table-hierarchy-pretty-diff.html
https://build.webkit.org/results/GTK%20Linux%2064-bit%20Release%20%28Tests%29/r189464%20%2810899%29/accessibility/aria-tables-pretty-diff.html
https://build.webkit.org/results/GTK%20Linux%2064-bit%20Release%20%28Tests%29/r189464%20%2810899%29/accessibility/table-attributes-pretty-diff.html
https://build.webkit.org/results/GTK%20Linux%2064-bit%20Release%20%28Tests%29/r189464%20%2810899%29/accessibility/table-cell-spans-pretty-diff.html
https://build.webkit.org/results/GTK%20Linux%2064-bit%20Release%20%28Tests%29/r189464%20%2810899%29/accessibility/table-cells-pretty-diff.html
Attachments
Patch
(34.39 KB, patch)
2015-12-08 02:13 PST
,
Joanmarie Diggs
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Joanmarie Diggs
Comment 1
2015-12-08 02:13:24 PST
Created
attachment 266864
[details]
Patch
Mario Sanchez Prada
Comment 2
2015-12-08 02:19:33 PST
Comment on
attachment 266864
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=266864&action=review
Looks good, just a minor comment below to consider before landing
> Source/WebCore/ChangeLog:8 > + Failing tests rebaselined.
It looks like this comment belongs to LayoutTests/ChangeLog and something else should be in here
WebKit Commit Bot
Comment 3
2015-12-08 03:07:30 PST
Comment on
attachment 266864
[details]
Patch Clearing flags on attachment: 266864 Committed
r193746
: <
http://trac.webkit.org/changeset/193746
>
WebKit Commit Bot
Comment 4
2015-12-08 03:07:33 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug