[GTK] 15 accessibility tests fail since r186692. https://bugs.webkit.org/show_bug.cgi?id=148938

Reviewed by Mario Sanchez Prada.

Source/WebCore:

Failing tests rebaselined.

* accessibility/atk/WebKitAccessibleWrapperAtk.cpp:
(atkRole): Treat GridCellRole and CellRole the same.
(roleIsTextType): Treat GridCellRole and CellRole the same.

LayoutTests:

* platform/gtk/TestExpectations: Removed failing tests.
* platform/gtk/accessibility/roles-computedRoleString-expected.txt: Rebaselined.
* platform/gtk/accessibility/table-attributes-expected.txt: Rebaselined.
* platform/gtk/accessibility/table-cell-spans-expected.txt: Rebaselined.
* platform/gtk/accessibility/table-cells-expected.txt: Rebaselined.
* platform/gtk/accessibility/table-detection-expected.txt: Rebaselined.
* platform/gtk/accessibility/table-sections-expected.txt: Rebaselined.
* platform/gtk/accessibility/table-with-rules-expected.txt: Rebaselined.


Canonical link: https://commits.webkit.org/170133@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@193746 268f45cc-cd09-0410-ab3c-d52691b4dbfc